--- a/2-Call-OwnApi/daemon-console/appsettings.json
+++ b/2-Call-OwnApi/daemon-console/appsettings.json
@@ -15,6 +15,12 @@
 		"BaseUrl": "https://localhost:44372/",
 		"RelativePath": "api/TodoList",
 		"RequestAppToken": true,
-		"Scopes": [ "[Enter here the scopes for your web API]" ]  // . E.g. 'api://<API_APPLICATION_ID>/.default'
+		"Scopes": [ "[Enter here the scopes for your web API]" ] // . E.g. 'api://<API_APPLICATION_ID>/.default'
+	},
+	"MyOtherWebApi": {
+		"BaseUrl": "https://localhost:44372/",
+		"RelativePath": "api/TodoList/get-other",
+		"RequestAppToken": true,
+		"Scopes": [ "[Enter here the scopes for your web API]" ] // . E.g. 'api://<API_APPLICATION_ID>/.default'
 	}
 }
